# smart-esprit

menu/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  menu.glade  menu.gladep
menu/autom4te.cache/: output.0  requests  traces.0  traces.1
menu/po/: Makefile  Makefile.in
menu/smart_esprit/: Makefile  config.status  final.glade
menu/smart_esprit/autom4te.cache/: requests
menu/smart_esprit/src/: Makefile  Makefile.am  Makefile.in  admin.c  admin.h  callbacks.c  callbacks.h  capt.txt  capteur.c  capteur.h  dashboard.c  dashboard.h  dashbord  final  interface.c  interface.c.bak  interface.h  interface.h.bak  main.c  mouvement.txt  recherchecapt.txt  reclamation.txt  temperature.txt  treeview.h  utilisateur.txt
menu/smart_esprit/src/.deps/: callbacks.Po
menu/src/: Makefile  Makefile.am  Makefile.in  Menu.txt  callbacks.c  callbacks.h  interface.c  interface.c.bak  interface.h  main.c  menu  menu.c  menu.h
menu/src/.deps/: callbacks.Po  menu.Po
